# dash-forge

./: .gitignore  Cargo.toml  EXECUTION.md  Makefile  README.md
.github/workflows/: ci.yml  pages.yml  rust.yml  testnet-nightly.yml
crates/dg/: Cargo.toml
crates/dg/src/: auth.rs  collab.rs  common.rs  config.rs  context.rs  cost.rs  doctor.rs  fmt.rs  issue.rs  main.rs  maint.rs  pr.rs  release.rs  repo.rs  storage.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: backends.rs  collab.rs  cost.rs  error.rs  keystore.rs  lib.rs  pack.rs  platform.rs  repo.rs  rules.rs  tokens.rs
crates/forge-core/src/backends/: gitmirror.rs  https.rs  ipfs.rs  live_tests.rs  platform.rs  s3.rs
crates/forge-core/src/pack/: build.rs  flatindex.rs  gittests.rs  locator.rs  manifest.rs  parse.rs
crates/forge-core/tests/: collab_tokens.rs  live_roundtrip.rs  repo_lifecycle.rs
crates/forge-import/: Cargo.toml
crates/forge-import/src/: claim.rs  estimate.rs  github.rs  importer.rs  main.rs  state.rs
crates/forge-relay/: Cargo.toml
crates/forge-relay/examples/: ci_consumer.rs
crates/forge-relay/src/: config.rs  daemon.rs  deliver.rs  error.rs  health.rs  ingest.rs  main.rs  payload.rs  ssrf.rs  subscriptions.rs
crates/git-remote-dash/: Cargo.toml
crates/git-remote-dash/src/: admin.rs  git.rs  helper.rs  journal.rs  main.rs  options.rs  url.rs
docs/: architecture.md  design-freeze-2.md  economics.md  implementation-plan.md  init-reconciliation.md  mainnet-runbook.md
docs/contracts/: data-contracts.md
docs/design/: style-guide.md
docs/prd/: 01-product-overview.md  02-git-remote-helper-cli.md  03-web-app.md  04-storage-adapters.md  05-forge-relay.md  06-forge-import.md
docs/research/: platform-constraints.md  spike-results.md
docs/testing/: e2e-test-plan.md
e2e/cli/: config.sh  lib.sh  run.sh
forge-contracts/: node_modules
forge-contracts/contracts/: registry.json
forge-contracts/deployments/: testnet.json
forge-contracts/scripts/: deploy.mjs
forge-contracts/templates/: repo-collab.json  repo-core.json  repo-v1.json
forge-contracts/vectors/: fold_issue__issue_assign_unassign_by_maintainer.json  fold_issue__issue_close_by_already_frozen_maintainer_inert.json  fold_issue__issue_close_by_author.json  fold_issue__issue_close_by_since_frozen_maintainer_valid.json  fold_issue__issue_close_by_stranger_inert.json  fold_issue__issue_close_reopen_by_author.json  fold_issue__issue_default_open.json  fold_issue__issue_label_by_author_inert.json  fold_issue__issue_label_churn_by_maintainer.json  fold_pr__pr_close_by_author.json  fold_pr__pr_draft_then_ready.json  fold_pr__pr_merge_by_maintainer_valid.json  fold_pr__pr_merge_by_nonholder_inert.json  fold_pr__pr_merge_by_writer_valid.json  fold_pr__pr_merge_cannot_reopen.json  fold_pr__pr_merge_unreachable_oid_inert.json  fold_pr__pr_retarget_by_maintainer.json  holdings__holdings_before_freeze_valid.json  holdings__holdings_destroyed.json  holdings__holdings_frozen_not_spendable.json  holdings__holdings_minted_write.json  holdings__holdings_none.json  holdings__holdings_tie_at_timestamp.json  holdings__holdings_unfreeze_readmits.json  holdings__holdings_write_and_maintain.json  matches_protected__glob_any_of_patterns.json  matches_protected__glob_bang_is_literal_not_negation.json  matches_protected__glob_bang_literal_matches_bang_prefixed.json  matches_protected__glob_brace_is_literal_not_alternation.json  matches_protected__glob_brace_literal_matches_literal.json  matches_protected__glob_doublestar_crosses_slash.json  matches_protected__glob_exact.json  matches_protected__glob_no_patterns_never_matches.json  matches_protected__glob_release_one_level.json  matches_protected__glob_star_does_not_cross_slash.json  matches_protected__glob_star_single_segment.json  overlay__overlay_add_path.json  overlay__overlay_delete_path.json  overlay__overlay_empty_diffs_unchanged.json  overlay__overlay_modify_path.json  (+26 more)
forge-web/: .eslintrc.json  .gitignore  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.ts
forge-web/app/: globals.css  layout.tsx  page.tsx
forge-web/components/: app-footer.tsx  app-header.tsx  app-shell.tsx  author.tsx  confirm-dialog.tsx  login-modal.tsx  markdown-view.tsx  profile-content.tsx  providers.tsx  repo-card.tsx  route-loading.tsx  theme-toggle.tsx
forge-web/contexts/: auth-context.tsx
forge-web/e2e/: .gitignore  a11y.spec.ts  auth-write.spec.ts  fallback-browse.spec.ts  helpers.ts  read-paths.spec.ts  static-server.mjs  zero-backend.spec.ts
forge-web/hooks/: use-async.ts  use-browse.ts  use-fallback-browse.ts  use-query-param.ts  use-repo.ts  use-sdk.ts  use-ui-store.ts
forge-web/lib/: constants.ts  utils.test.ts  utils.ts
infra/: docker-compose.yml  nginx-static.conf
infra/static-fixtures/: README.txt
spikes/S0.1-throughput/: 00-balance.mjs  01-publish.mjs  02-serial.mjs  03-pipeline.mjs  04-delete.mjs  RESULTS.md  check-contract.mjs  confirm.mjs  contract.json  harness.mjs  lib.mjs  package.json  pipe-w16.json  probe.mjs
spikes/S0.2-chunk-geometry/: 00-balance.mjs  01-publish-contract.mjs  01b-publish-manual.mjs  02-fund.mjs  03-measure-st.mjs  04-verify-sig.mjs  05-field-cap.mjs  06-real-chunk.mjs  RESULTS.md  lib.mjs  package.json
spikes/S0.3-proof-mode/: RESULTS.md  bench.mjs  connect-child.mjs  lib.mjs  negative-test.mjs  node_modules  package.json  raw-results.json  repro-proofs-false-panic.mjs  workload.mjs
spikes/S0.5-browse-plane/: RESULTS.md
spikes/S0.6-contracts/: RESULTS.md  build.mjs  flag-checks.mjs  probe.mjs  probe2.mjs  probe3.mjs  tokenlib.mjs  validate.mjs
spikes/S0.7-token-acl/: 00-balances.mjs  01-register.mjs  02-mint-to-collab.mjs  03-collab-create.mjs  04-contrib-create.mjs  05-freeze-and-block.mjs  06-destroy.mjs  07-token-history.mjs  RESULTS.md  lib.mjs  package.json  state.json
spikes/S0.8-query-cursors/: 01-register.mjs  02-populate.mjs  03-exp-b.mjs  04-exp-a.mjs  05-delete.mjs  RESULTS.md  lib.mjs  package.json  qlib.mjs  state.json
tools/mint-identity/: README.md  (+3 more)
(+167 files in other folders)
