[package]
name = "dg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "dg — the gh-shaped command-line interface for Dash Forge."

[[bin]]
name = "dg"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
