[package]
name = "dg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "dg — the gh-shaped command-line interface for Dash Forge."

[[bin]]
name = "dg"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json.workspace = true
toml = "0.8"
hex = "0.4"

[lints]
workspace = true
