[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared library for Dash Forge: platform client, pack pipeline, backends, rules, cost and keystore."

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Dash Platform SDK — confined to `forge-core::platform` per style-guide §B.
dash-sdk.workspace = true
dapi-grpc.workspace = true
rs-sdk-trusted-context-provider.workspace = true
simple-signer.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
