[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared library for Dash Forge: platform client, pack pipeline, backends, rules, cost and keystore."

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# pack pipeline (git object/pack handling, hashing, compression)
sha2 = "0.10"
sha1 = "0.10"
flate2 = "1"
hex = "0.4"
glob-match = "0.2"

# storage backends (HTTP/S3/IPFS adapters). reqwest on rustls (no system OpenSSL);
# multipart for the kubo `/api/v0/add` upload. async-trait keeps `PackBackend`
# object-safe (heterogeneous backends behind `dyn` in the failover registry);
# futures drives the ≤2-parallel reader race and the window-8 platform pipeline.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart"] }
async-trait = "0.1"
futures = "0.3"
# `time` only — the bounded read-after-write verify polls (tokens.rs) sleep between
# re-reads on the caller's tokio runtime (the SDK's broadcast_and_wait already needs one).
tokio = { workspace = true, features = ["time"] }

# Dash Platform SDK — confined to `forge-core::platform` per style-guide §B.
dash-sdk.workspace = true
dapi-grpc.workspace = true
drive-proof-verifier.workspace = true
rs-sdk-trusted-context-provider.workspace = true
simple-signer.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"
hex = "0.4"
serde_json = { workspace = true }

[lints]
workspace = true
