[package]
name = "forge-import"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "forge-import — GitHub → Dash Forge migrator (Forgejo-semantics mapping)."

[[bin]]
name = "forge-import"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[lints]
workspace = true
