[package]
name = "forge-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "forge-relay — interchangeable daemon bridging the Platform ST firehose to webhooks/notifications/CI."

[[bin]]
name = "forge-relay"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
serde.workspace = true
serde_json.workspace = true

# Config file parsing.
toml = "0.8"

# Webhook delivery: reqwest on rustls (no system OpenSSL), matching forge-core's setup.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# HMAC-SHA256 signatures (X-Hub-Signature-256) and delivery-id entropy.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }

[[example]]
name = "ci_consumer"
path = "examples/ci_consumer.rs"

[lints]
workspace = true
